# pendulum-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pendulum_simulator/: cfg.py  main.py  pendulum.py
tests/: test_pygame.py
